Фильтр на странице find
Обвязка на стороне сервера
Либа dropdown
Отделельный сервис для общения с сервером
