# EatRegerator/ClientApp/src/services/BaseResponse.ts
@@ -1,0 +1,4 @@
+export class BaseResponse {
+  public resultCode: number;
+  public error: string
+}
